<resources>
    <string name="app_name">TipCalculatorActivity​</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="enter_your_check_amount">Enter your check amount</string>

    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="button">Button</string>
    <string name="select_tipping_amount">Select tipping amount</string>
    <string name="select_tip_percentage">Select tip percentage</string>

    <string name="calculate">Calculate</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="your_calculated_tip_is_and_your_total_is">Your calculated tip is ___ and your total is ___.</string>
    <string name="dollarSymbol">$</string>
    <string name="your_calculator_tip_is">Your calculator tip is</string>


</resources>
