<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:padding="0dp"
        android:text="@string/tip_calculator"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/inputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:text="@string/enter_your_check_amount"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dollarSymbolTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/dollarSymbol" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_your_check_amount"
            android:inputType="number|numberDecimal"
            android:textCursorDrawable="@color/colorAccent"
            android:autofillHints="" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/tipButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="0"
        android:checkedButton="@id/tipButtonLabel"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tipButtonLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/select_tip_percentage" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/_10" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/_15" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/_20" />

    </RadioGroup>

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:text="@string/calculate"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:text="@string/your_calculator_tip_is"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tipOutputTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/textview"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/resultTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0"
            android:text="and you total is"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/totalOutputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/textview"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>